--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -122,7 +122,7 @@ body {
 
 
 .hero-img {
-  background-image: url("./me.jpg");
+  background-image: url("https://avatars.githubusercontent.com/u/114244228?v=4");
   width: 35rem;
   height: 35rem;
   background-size: cover;
