--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /* overflow-x: hidden; */
 }
 
 html {
@@ -18,7 +19,7 @@ body {
     /* background-color: white; */
     font-family: "Bricolage Grotesque", sans-serif;
     font-optical-sizing: auto;
-    position: relative;
+    /* position: relative; */
     background: black;
 }
 /* Firefox */
@@ -60,12 +61,12 @@ body {
 }
 
 .mobile-menu {
-    font-size: 2.3rem;
+    /* font-size: 2.3rem; */
     cursor: pointer;
     display: none;
 }
 .mobile-menu:hover {
-    color: #147efb;
+    /* color: #147efb; */
     transition: all 0.3s;
 }
 @media (max-width: 900px) {
@@ -84,10 +85,10 @@ body {
 
 .mobile-nav {
     display: flex;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     z-index: 300;
-    background-color: white;
+    /* background-color: white; */
     position: fixed;
     top: 0;
     left: 0;
@@ -97,21 +98,21 @@ body {
     transition: all 0.3s ease-in-out;
 }
 .mobile-nav span {
-    font-size: 3.3rem;
+    /* font-size: 3.3rem; */
     position: absolute;
-    top: 2rem;
-    right: 4rem;
+    /* top: 2rem; */
+    /* right: 4rem; */
     cursor: pointer;
 }
 .mobile-nav span:hover {
-    color: #147efb;
+    /* color: #147efb; */
     transition: all 0.3s;
 }
 .mobile-nav ul {
     display: flex;
     flex-direction: column;
-    gap: 4rem;
-    font-size: 2.3rem;
+    /* gap: 4rem; */
+    /* font-size: 2.3rem; */
     list-style: none;
 }
 .mobile-nav ul a {
@@ -120,40 +121,9 @@ body {
     font-weight: 500;
 }
 .mobile-nav ul a:hover {
-    color: #147efb;
     transition: all 0.3s;
 }
 
-.hero-img {
-    background-image: url("https://avatars.githubusercontent.com/u/114244228?v=4");
-    width: 35rem;
-    height: 35rem;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    /* border: 3px solid #2d2e32; */
-    animation: morph 8s ease-in-out infinite;
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    position: relative;
-    transition: all 1s ease-in-out;
-}
-@media (max-width: 500px) {
-    .hero-img {
-        width: 28rem;
-        height: 28rem;
-    }
-}
-@keyframes morph {
-    0% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-    50% {
-        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
-    }
-    100% {
-        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
-    }
-}
 
 @keyframes rotate {
     0% {
