--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 * {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     margin: 0;
     padding: 0;
     /* overflow-x: hidden; */
@@ -18,9 +18,9 @@ html {
 body {
     /* background-color: white; */
     font-family: "Bricolage Grotesque", sans-serif;
-    font-optical-sizing: auto;
+    /* font-optical-sizing: auto; */
     /* position: relative; */
-    background: black;
+    /* background: black; */
 }
 /* Firefox */
 * {
